--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,2 +1,11 @@
 UPLOAD_DIR: data/uploads
-BUFFER_DIR: data/uploads/buffers
+
+buffer:
+  distance_unit: "meters"
+  input_crs: "EPSG:4326"
+  output_crs: "EPSG:3857"
+  metric_crs: "EPSG:3857"
+
+  BUFFER_DIR: data/uploads/buffers
+
+UNION_DIR: data/uploads/unions
